[gd_scene load_steps=11 format=3 uid="uid://bq4ldr830rwdi"]

[ext_resource type="Script" path="res://player/player.gd" id="1_d588t"]
[ext_resource type="Shader" path="res://player/Player.gdshader" id="2_sr0sw"]
[ext_resource type="Script" path="res://player/player_synchronizer.gd" id="3_sfhkw"]
[ext_resource type="Script" path="res://player/input_synchronizer.gd" id="4_yrwxq"]

[sub_resource type="BoxShape3D" id="BoxShape3D_k7gta"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rtud3"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("2_sr0sw")
shader_parameter/albedo = Color(0, 1, 0, 1)
shader_parameter/point_size = 1.0
shader_parameter/roughness = 1.0
shader_parameter/metallic_texture_channel = null
shader_parameter/specular = 0.5
shader_parameter/metallic = 0.0
shader_parameter/uv1_scale = Vector3(1, 1, 1)
shader_parameter/uv1_offset = Vector3(0, 0, 0)
shader_parameter/uv2_scale = Vector3(1, 1, 1)
shader_parameter/uv2_offset = Vector3(0, 0, 0)

[sub_resource type="BoxMesh" id="BoxMesh_q0mvv"]
resource_local_to_scene = true
material = SubResource("ShaderMaterial_rtud3")

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_wjw65"]
properties/0/path = NodePath("MultiplayerSynchronizer:sync_pos")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("MultiplayerSynchronizer:sync_lvel")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("MultiplayerSynchronizer:sync_avel")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("MultiplayerSynchronizer:sync_quat")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath("MultiplayerSynchronizer:sync_frame")
properties/4/spawn = true
properties/4/replication_mode = 1

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_kayh3"]
properties/0/path = NodePath(".:move")
properties/0/spawn = true
properties/0/replication_mode = 1

[sub_resource type="LabelSettings" id="LabelSettings_lcck6"]
resource_local_to_scene = true
outline_size = 2
outline_color = Color(0, 1, 0, 1)

[node name="Player" type="RigidBody3D"]
can_sleep = false
linear_damp = 0.8
angular_damp = 1.0
script = ExtResource("1_d588t")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_k7gta")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_q0mvv")

[node name="RemoteTransform3D" type="RemoteTransform3D" parent="."]
remote_path = NodePath("../Arm")
update_rotation = false
update_scale = false

[node name="Arm" type="Node3D" parent="."]
top_level = true

[node name="Camera3D" type="Camera3D" parent="Arm"]
transform = Transform3D(0.764383, -0.286663, 0.577532, 0, 0.895728, 0.444602, -0.644763, -0.339846, 0.684679, 2.30865, 1.77727, 2.73697)

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_interval = 0.2
replication_config = SubResource("SceneReplicationConfig_wjw65")
script = ExtResource("3_sfhkw")

[node name="InputSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_kayh3")
script = ExtResource("4_yrwxq")

[node name="GridContainer" type="GridContainer" parent="."]
offset_right = 96.0
offset_bottom = 50.0
columns = 2

[node name="Peer" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Client"

[node name="RPCBUTTON" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
disabled = true
text = "RPC"

[node name="Speed" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Speed:
"

[node name="SpeedValue" type="Label" parent="GridContainer"]
layout_mode = 2
text = "n/a
"
label_settings = SubResource("LabelSettings_lcck6")

[node name="Pressed" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Pressed:
"

[node name="PressedValue" type="Label" parent="GridContainer"]
layout_mode = 2
text = "n/a
"
label_settings = SubResource("LabelSettings_lcck6")

[node name="Postion" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Position"

[node name="PositionValue" type="Label" parent="GridContainer"]
layout_mode = 2

[connection signal="pressed" from="GridContainer/RPCBUTTON" to="." method="_on_rpcbutton_pressed"]
